<resources>
    <string name="app_name">Pic</string>
    <string name="title_activity_dialog_test">DialogMainActivity</string>
    <string name="title_activity_dialog_main">DialogMainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_grid_acitivy">GridAcitivy</string>
    <string name="title_activity_setting_pic">SettingPicActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_developer_info">DeveloperInfoActivity</string>


    <string name="title_activity_finish_test">FinishTestActivity</string>
    <string name="title_activity_pic_main">Pic</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>

    <!--국제 화를 위한 네이밍-->
    <string name="trash">Trash</string>

    <string name="main_select_all">Select All</string>
    <string name="main_select_of" formatted="false"> of %d photo(s) selected</string>
    <string name="main_moved" formatted="false"> pictures has been moved to \'%s\'</string>
    <string name="main_please_select">Select photo</string>
    <string name="main_close">Press once more to close</string>
    <string name="main_trash"> photo(s) has been moved to Trash</string>
    <string name="share_title">Share</string>

    <string name="new_album_title">New album</string>
    <string name="new_album_cancel">Cancel</string>
    <string name="new_album_confirm">OK</string>
    <string name="new_album_done"> album has been created</string>
    <string name="new_album_error_same">The album already exists with that name .</string>
    <string name="new_album_error_no_name">Please enter an album name</string>
    <string name="new_album_hint">Please enter an album name</string>

    <string name="setting_title">Settings</string>
    <string name="setting_description">Quick and Easy Photo Management</string>
    <string name="setting_on_off">Set Pic whether to run</string>
    <string name="setting_tutorial">Tutorial</string>
    <string name="setting_ask">Question</string>
    <string name="setting_send_mail">Send an email to the developer</string>
    <string name="setting_made_by">Creator</string>
    <string name="tutorial_no_1">Pic starts \nwhen you take or \ndownload a photo</string>
    <string name="tutorial_no_2">Select photos you want to move</string>
    <string name="tutorial_no_3">Click an album to move the photos</string>
    <string name="tutorial_no_4">You can also share \nor delete the photos</string>
    <string name="tutorial_no_5">Long-click the photo \nto enlarge</string>
    <string name="madeby_title">Creator</string>
    <string name="madeby_plan">Planner</string>
    <string name="madeby_design">UX/UI</string>
    <string name="madeby_develop">Developer</string>



    <string name="jsi">Sangin Chun</string>
    <string name="khj">Hyunjung Kim</string>
    <string name="kgh">Gahyun Kim</string>
    <string name="pth">Taeho Park</string>
    <string name="odk">Dokeun Oh</string>

    <string name="title_activity_tutorial2">TutorialActivity2</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="complete_move">complete photo move!</string>


</resources>
